tests/compile_fail/conflicting_config.c
#define MCONF_MAX_ENTRIES 3
#include "mconf.h"

int main(void)
{
    return 0;
}
